force-app/main/default/objects/Invoice__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Stores derived account record type; used for reporting and conditional logic.</description>
    <formula>Bill_To_Account__r.RecordType.Name</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>