force-app/main/default/objects/Invoice__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the invoice to the account being billed; used to identify the customer responsible for payment.</description>
    <label>Bill For Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>