force-app/main/default/objects/Invoice__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Stores derived billing city; used for regional reporting and segmentation.</description>
    <formula>Bill_To_Account__r.BillingCity</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>