force-app/main/default/objects/Invoice__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <description>Stores derived billing state or province; used for geographic segmentation and reporting.</description>
    <formula>Bill_To_Account__r.BillingState</formula>
    <label>Billing State/Province</label>
    <type>Text</type>
</CustomField>