force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Stores the due date of the invoice; used to track payment deadlines and trigger reminders.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>