force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Stores the invoice date when invoice pdf is sent or created; used for financial reporting and accounting.</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>