force-app/main/default/objects/Invoice__c/fields/Original_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Original invoice generated by the CP for the LP</inlineHelpText>
    <label>Original Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>