force-app/main/default/objects/Invoice__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Stores the term or duration(e.g.,1YEAR, 2YEAR, 1MONTH) associated with the invoice; used for display and reporting.</description>
    <formula>TEXT( Related_Order__r.Term_Length__c ) &amp;&quot; &quot;&amp;  TEXT(Related_Order__r.Term_Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>