force-app/main/default/objects/Invoice__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <description>Calculates the remaining amount due; used to track outstanding balance.</description>
    <label>Total Paid</label>
    <summarizedField>Membership_Transaction__c.OriginalAmount__c</summarizedField>
    <summaryForeignKey>Membership_Transaction__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>