force-app/main/default/objects/Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Bill_To_Account__c</columns>
    <columns>Bill_To_Contact__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Order__c</columns>
    <columns>Total_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>